[package]
name = "nix-build-test"
version = "0.1.0"
edition = "2021"

[dependencies]
hyper = { version = "0.14", features = [
    "http1",
    "client",
    "stream",
] }
anyhow = "1.0.74"
async-openai = "0.10.3"
async-stream = "0.3.5"
async-trait = "0.1.73"
builder-pattern = "0.4.2"
cfg-if = "1.0.0"
chrono = { version = "0.4.26", features = ["serde"] }
const_format = "0.2.31"
dotenv = "0.15.0"
futures = "0.3.28"
hyper-rustls = { version = "0.24.1", features = ["http2"]}
jsonwebtoken = "8.3.0"
lambda-web = { version = "0.2.1", features = ["rocket05"] }
lambda_runtime = "0.10"
mockall = "0.11.4"
prost = "0.11"
query_map = { version = "0.6.0", features = ["serde"] }
reqwest = "0.11.18"
rocket = { version = "=0.5.0-rc.3", features = ["serde_json", "json", "uuid"] }
rocket_cors = { git = "https://github.com/lawliet89/rocket_cors", rev="985098d" }
rocket_okapi = { version = "0.8.0-rc.3", features = ["swagger"] }
# rocket_okapi = {  path = "../../misc/okapi/rocket-okapi/", features = ["swagger"] }
#rocket = { git = "https://github.com/SergioBenitez/Rocket", branch = "master" , features = ["serde_json", "json"] }
rustls-pemfile = { version = "1" }
schemars = {version = "0.8", features = ["chrono", "uuid1"]}
serde = { version = "1.0.183", features = ["derive"] }
serde_derive = "1.0.183"
serde_json = "1.0.104"
serde_with = "3.2.0"
serde_yaml = "0.9.25"
sqlx = { version = "0.7.3", features = ["all-databases", "postgres", "sqlite", "macros", "migrate", "runtime-tokio-rustls", "chrono", "json", "uuid"] }
thiserror = "1.0.46"
tokio = { version = "1", features = ["macros", "time", "rt-multi-thread"] }
tokio-rustls = { version = "0.24.1" }
tokio-stream = { version = "0.1.14", features = ["sync"] }
tonic = { version = "0.9", features = ["transport","tls","tls-roots"] } #, "tls-webpki-roots"] }
tower = "0.4.13"
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", default-features = false, features = ["ansi", "fmt"] }
trait_enum = "0.5.0"
uuid = { version = "1.4.1", features = ["v4", "serde"] }
tokio-retry = "0.3.0"
backon = "0.4.2"
aws-sdk-s3 = "1.21.0"
aws-config = "1.1.9"
urlencoding = "2.1.3"

[build-dependencies]
tonic-build = "0.9"

[features]
static_ssl = ['openssl/vendored']

[dependencies.openssl]
optional = true
version = "0.10.56"
